-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
6.0
-
None
-
-
e8873003f054034b76621a47204f6fe604f71b8a (qt/qtbase/dev)
https://testresults.qt.io/coin/integration/qt/qtbase/tasks/web_qt_qtbase_1603176971503
agent:2020/10/20 09:05:13 build.go:379: FAIL! : tst_QSystemTrayIcon::lastWindowClosed() Received a fatal error. agent:2020/10/20 09:05:13 build.go:379: Loc: [Unknown file(0)] agent:2020/10/20 09:05:13 build.go:379: Totals: 5 passed, 1 failed, 0 skipped, 0 blacklisted, 660ms agent:2020/10/20 09:05:13 build.go:379: ********* Finished testing of tst_QSystemTrayIcon *********
- relates to
-
QTBUG-86187 Ubuntu 20.04 has InsignificantTests configurations in the CI
-
- Closed
-