Fix crash in tst_QSystemTrayIcon::lastWindowClosed()

Handle null QIcons. Note this was already fixed in 5.15 separately,
see 6c8adfaf5dc.

Fixes: QTBUG-87729
Change-Id: Ia759fbe95fafcea9451d393dc1aa077f5651919b
Reviewed-by: Liang Qi <liang.qi@qt.io>